Update website and documentation with new features (#129)
* Change icon on GitHub page

* Change widget default tiptext

* Update contribute page text

* Update quickstart

* Simplify product website

* Update installation instructions

* Add config generator
